[gd_scene load_steps=4 format=2]

[ext_resource path="res://HUD/AnalogButton.gd" type="Script" id=1]
[ext_resource path="res://titlescreen/whiteCircle.png" type="Texture" id=2]

[sub_resource type="Animation" id=1]
resource_name = "animButtA"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("circleA:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.185, 0.185 ), Vector2( 0.21, 0.21 ) ]
}

[node name="AnalogButton" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ButtonA" type="Sprite" parent="."]
position = Vector2( 108.178, 299.641 )
scale = Vector2( 0.8, 0.8 )
__meta__ = {
"_edit_group_": true
}

[node name="Buttonanalog" type="Button" parent="ButtonA"]
margin_left = -40.2262
margin_top = -39.2262
margin_right = 39.7738
margin_bottom = 39.7738
flat = true

[node name="animButtA" type="AnimationPlayer" parent="."]
anims/animButtA = SubResource( 1 )

[node name="circleA" type="Sprite" parent="."]
position = Vector2( 108.114, 299.634 )
scale = Vector2( 0.185, 0.185 )
texture = ExtResource( 2 )
[connection signal="pressed" from="ButtonA/Buttonanalog" to="." method="_on_Buttonanalog_pressed"]
